--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <span class="text-dark"> To tanslate</span>
                 <span class="text-light ">Press Here</span>
                 <button class="but btn btn-hover d-block btn-secondary  mt-2">Copy</button>
-                <textarea name="" id="tran" cols="100" rows="3" class="rounded-3 mt-3 pl-5  col-sm-3 col-lg-6" placeholder="Enter text here"></textarea>
+                <textarea name="" id="tran" cols="25" rows="3" class="rounded-3 mt-3 pl-5  col-sm-3 col-lg-6" placeholder="Enter text here"></textarea>
             </div>
         </div>
         <hr>
@@ -262,7 +262,7 @@
                 <span class="text-dark"> To tanslate</span>
                 <span class="text-light ">Press Here</span>
                 <button class="but btn btn-hover d-block btn-secondary  mt-2">Copy</button>
-                <textarea name="" id="tran" cols="100" rows="3" class="rounded-3 mt-3 pl-5 col-sm-6  " placeholder="Enter text here"></textarea>
+                <textarea name="" id="tran" cols="25" rows="3" class="ta rounded-3 mt-3  " placeholder="Enter text here"></textarea>
             </div>
         </div>
      </section><!--end of sec3-->
